# ranson-rig

./: .gitignore  README.md  pyproject.toml
bonsai/: Bonsai.config  NuGet.config  setup.ps1
src/matlab/: Osc.m  OscTcp.m  Rig.m  harpread.m  oscrecv.m  oscsend.m  oscstr.m  osctest.m
src/python/: osc-test.py  rigstim.py
src/python/pyOSC3fix/: OSC3.py
src/workflows/: Extensions.csproj  ranson-rig-recorder.bonsai  ranson-rig.bonsai  ranson-rig.bonsai.layout  screen-calibration.bonsai
src/workflows/Calibration/: display_intrinsics.yml  front_extrinsics.yml  front_intrinsics.yml  left_extrinsics.yml  left_intrinsics.yml  right_extrinsics.yml  right_intrinsics.yml
src/workflows/Extensions/: ArrayReader.cs  ArrayWriter.cs  CloseTrial.bonsai  CorridorTrial.bonsai  EndTrial.bonsai  EventPlayer.cs  FrameEventLogger.bonsai  FullFieldStimulus.bonsai  GratingStimulus.bonsai  GratingsTrial.bonsai  HarpRig.bonsai  LogExperiment.bonsai  LogExperimentMetadata.bonsai  LogMetadata.bonsai  LogRegisters.bonsai  LogTrial.bonsai  ParseColor.cs  PlayOutcome.bonsai  PlayStimulus.bonsai  PulseValve.bonsai  ReplayControl.bonsai  ResetEncoder.bonsai  ResponseWindow.bonsai  SaveCalibration .bonsai  ScreenCalibration.bonsai  SoftRig.bonsai  StartTrial.bonsai  StartWith.bonsai  StimulusResponse.bonsai  SuppressResponse.bonsai  SyncQuad.bonsai  SyncSequence.cs  TestScreenConfiguration.bonsai  TextureFolder.cs  TextureSource.cs  TrialPrefix.bonsai  TriangleScreenConfiguration.bonsai  UScreenConfiguration.bonsai  VideoFolder.cs  VideoPreloader.cs  (+2 more)
